api changepassword and delete added
