# backend/internal/api/system/routes.go
@@ -16,4 +16,6 @@ func Routes(e *echo.Group) {
 	g.PATCH("", ctrl.SystemUpdate)
 
 	g.POST("/system/users", ctrl.CreateUser, middlewares.AdminPermission())
+	g.POST("/system/users/:uid/password", ctrl.ChangePassword, middlewares.AdminPermission())
+	g.DELETE("/system/users/:uid", ctrl.DeleteUser, middlewares.AdminPermission())
 }
