# backend/internal/api/system/types.go
@@ -41,3 +41,7 @@ type UsersResponse struct {
 	Meta   request.Meta   `json:"meta" validate:"required"`
 	Result *[]models.User `json:"result" validate:"omitempty"`
 }
+
+type ChangeUserPassword struct {
+	Password string `json:"password" validate:"required"`
+}
